# home-credit-mlops

./: .gitignore  README.md  pyproject.toml
configs/: default.toml
docs/: mode_emploi_pipeline_ml.md
scripts/: build_home_credit_dataset.py  compare_models.py  eda.py  mlflow_ui.py  prepare_dataset.py  profile_home_credit_raw.py  register_champion_model.py  run_home_credit_experiment.py  serve_model.py  train_model.py
src/home_credit_mlops/: logging_utils.py  mlflow_utils.py  settings.py
src/home_credit_mlops/data/: __init__.py  home_credit.py  io.py  preparation.py
src/home_credit_mlops/eda/: __init__.py  diagnostics.py  report.py  visualisation.py  vizualisation.py
src/home_credit_mlops/features/: __init__.py  preprocessing.py
src/home_credit_mlops/modeling/: __init__.py  benchmark.py  candidates.py  interpretability.py  metrics.py  serving.py  training.py
src/home_credit_mlops/reporting/: excel.py
tests/: submission_kernel02.csv  test2.py  test_benchmark_reporting.py  test_excel_reporting.py  test_home_credit_data.py  test_metrics.py  test_register_champion_model.py  test_sampling_candidates.py  test_serving_model.py
