[project]
name = "home-credit-mlops"
version = "0.1.0"
description = "Credit scoring project with MLflow tracking and a script-first MLOps workflow"
authors = [
    { name = "Maxime", email = "maximebarbier57@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy>=1.26,<3.0",
    "pandas>=2.2,<3.0",
    "pyarrow>=16,<21",
    "scikit-learn>=1.5,<2.0",
    "mlflow>=2.14,<4.0",
    "matplotlib>=3.9,<4.0",
    "seaborn>=0.13,<1.0",
    "shap==0.51.0",
    "missingno (>=0.5.2,<0.6.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
]

[project.scripts]
home-credit-build-dataset = "home_credit_mlops.data.home_credit:build_main"
home-credit-profile-raw = "home_credit_mlops.data.home_credit:profile_main"
home-credit-run-experiment = "home_credit_mlops.modeling.benchmark:main"
home-credit-compare-models = "home_credit_mlops.modeling.training:compare_models_main"
home-credit-train-model = "home_credit_mlops.modeling.training:train_model_main"
home-credit-mlflow-ui = "home_credit_mlops.mlflow_utils:ui_main"
home-credit-serve-model = "home_credit_mlops.mlflow_utils:serve_main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "home_credit_mlops", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
ruff = "^0.12.0"
ipykernel = "^7.3.0"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
